--- a/index.html
+++ b/index.html
@@ -1,166 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SSC CGL25</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SSC CGL English Practice</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
 
-        header {
-            background: #0d6efd;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            font-size: 1.5rem;
-        }
+    header {
+      background: #0d6efd;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 1.5rem;
+    }
 
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            background: rgba(255, 255, 255, 0.3);
-            padding: 1rem;
-            backdrop-filter: blur(10px);
-        }
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.5rem;
+      background: rgba(255, 255, 255, 0.3);
+      padding: 1rem;
+      backdrop-filter: blur(10px);
+    }
 
-            nav button {
-                padding: 0.5rem 1rem;
-                border: none;
-                background: #007bff;
-                color: white;
-                cursor: pointer;
-                border-radius: 0.5rem;
-                transition: background 0.3s ease;
-            }
+    nav button {
+      padding: 0.6rem 1rem;
+      border: none;
+      background: #007bff;
+      color: white;
+      cursor: pointer;
+      border-radius: 0.5rem;
+      transition: background 0.3s ease;
+      flex: 1 1 auto;
+      min-width: 100px;
+    }
 
-                nav button.active {
-                    background: orange !important;
-                }
+    nav button.active {
+      background: orange !important;
+    }
 
-        .filters {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 1rem;
-            backdrop-filter: blur(10px);
-        }
+    .filters {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem;
+      backdrop-filter: blur(10px);
+    }
 
-        .calendar {
-            display: grid;
-            grid-template-columns: repeat(6, 2.5rem);
-            gap: 0.5rem;
-            justify-content: center;
-            margin-bottom: 1rem;
-        }
+    .calendar {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
+      gap: 0.5rem;
+      justify-content: center;
+      width: 100%;
+      max-width: 300px;
+      margin-bottom: 1rem;
+    }
 
-            .calendar button {
-                padding: 0.5rem;
-                border-radius: 0.5rem;
-                border: none;
-                background-color: #dee2e6;
-                cursor: pointer;
-            }
+    .calendar button {
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      border: none;
+      background-color: #dee2e6;
+      cursor: pointer;
+    }
 
-                .calendar button.active {
-                    background-color: #0d6efd;
-                    color: white;
-                }
+    .calendar button.active {
+      background-color: #0d6efd;
+      color: white;
+    }
 
-        .difficulty {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-            justify-content: center;
-        }
+    .difficulty {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      justify-content: center;
+    }
 
-            .difficulty button {
-                padding: 0.5rem 0.8rem;
-                border-radius: 0.5rem;
-                border: none;
-                background-color: #dee2e6;
-                cursor: pointer;
-            }
+    .difficulty button {
+      padding: 0.5rem 0.8rem;
+      border-radius: 0.5rem;
+      border: none;
+      background-color: #dee2e6;
+      cursor: pointer;
+    }
 
-                .difficulty button.active {
-                    background-color: #0d6efd;
-                    color: white;
-                }
+    .difficulty button.active {
+      background-color: #0d6efd;
+      color: white;
+    }
 
-        .content {
-            padding: 2rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+    .content {
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-        .glass-box {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 2rem;
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 600px;
-        }
+    .glass-box {
+      background: rgba(255, 255, 255, 0.2);
+      padding: 2rem;
+      border-radius: 15px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 600px;
+    }
 
-        .question {
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
+    .question {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
 
-        .options button {
-            display: block;
-            margin: 0.5rem 0;
-            padding: 0.5rem;
-            width: 100%;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            background: #ffffffaa;
-        }
+    .options button {
+      display: block;
+      margin: 0.5rem 0;
+      padding: 0.5rem;
+      width: 100%;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      background: #ffffffaa;
+    }
 
-        .correct {
-            background: #d4edda !important;
-        }
+    .correct {
+      background: #d4edda !important;
+    }
 
-        .incorrect {
-            background: #f8d7da !important;
-        }
+    .incorrect {
+      background: #f8d7da !important;
+    }
 
-        .navigation {
-            margin-top: 2rem;
-            text-align: center;
-        }
+    .navigation {
+      margin-top: 2rem;
+      text-align: center;
+    }
 
-            .navigation button {
-                padding: 0.5rem 1rem;
-                margin: 0.3rem;
-                border: none;
-                background: #6c757d;
-                color: white;
-                border-radius: 0.5rem;
-                cursor: pointer;
-            }
+    .navigation button {
+      padding: 0.5rem 1rem;
+      margin: 0.3rem;
+      border: none;
+      background: #6c757d;
+      color: white;
+      border-radius: 0.5rem;
+      cursor: pointer;
+    }
 
-        .day-label {
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-    </style>
+    .day-label {
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    @@media screen and (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      nav button {
+        width: 100%;
+      }
+
+      .glass-box {
+        padding: 1rem;
+      }
+
+      .calendar {
+        grid-template-columns: repeat(6, 1fr);
+      }
+    }
+  </style>
 </head>
 <body>
     <header>SSC CGL25</header>
 
     <nav>
-        <button onclick="loadSection('idioms')" id="btn-idioms">Idioms</button>
-        <button onclick="loadSection('ows')" id="btn-ows">One Word</button>
-
         <button onclick="loadSection('idioms')" id="btn-idioms">Idioms</button>
         <button onclick="loadSection('ows')" id="btn-ows">OWS</button>
         <button onclick="loadSection('preposition')" id="btn-preposition">Prepo</button>
